[gd_scene load_steps=20 format=3 uid="uid://b18y5lkie8gwh"]

[ext_resource type="Script" uid="uid://uafk0wfp637u" path="res://scenes/menus/scripts/main_menu.gd" id="1_bre17"]
[ext_resource type="Shader" uid="uid://dvay6elrsfoe5" path="res://assets/shaders/scrollingBG.gdshader" id="1_euy4r"]
[ext_resource type="Texture2D" uid="uid://w23xxbihkix8" path="res://assets/mainMenuBackground.png" id="2_bre17"]
[ext_resource type="FontFile" uid="uid://c6o2q18e80rdv" path="res://assets/FugazOne-Regular.ttf" id="3_88kup"]
[ext_resource type="Texture2D" uid="uid://cc3j7bnv1vux3" path="res://assets/blank.png" id="5_3w8rc"]
[ext_resource type="PackedScene" uid="uid://6ao3xt3b6vd1" path="res://scenes/menus/menu_button.tscn" id="5_bre17"]
[ext_resource type="PackedScene" uid="uid://qou785xe3ayh" path="res://scenes/menus/settings_menu.tscn" id="6_88kup"]
[ext_resource type="Texture2D" uid="uid://dapuvlvd54byl" path="res://assets/animations/climbingTony/climbingTony2.png" id="6_uxao6"]
[ext_resource type="Texture2D" uid="uid://6dhv5w1q3f8y" path="res://assets/animations/climbingTony/climbingTony3.png" id="7_vr0hv"]
[ext_resource type="Texture2D" uid="uid://ciiwj30eyuo1o" path="res://assets/animations/climbingTony/climbingTony4.png" id="8_a3hrp"]
[ext_resource type="Texture2D" uid="uid://dtq6pxfd6gs86" path="res://assets/animations/climbingTony/climbingTony5.png" id="9_25m6f"]
[ext_resource type="Texture2D" uid="uid://c55gjatiq1www" path="res://assets/spriteStand.png" id="10_nkawv"]
[ext_resource type="PackedScene" uid="uid://v2xot6apylu2" path="res://scenes/menus/controls_menu.tscn" id="13_3w8rc"]
[ext_resource type="PackedScene" uid="uid://0lu4ori328nx" path="res://scenes/menus/quit_menu.tscn" id="13_bh4e2"]
[ext_resource type="AudioStream" uid="uid://608dp67sawhy" path="res://assets/sounds/Cave Song.wav" id="15_vr0hv"]
[ext_resource type="AudioStream" uid="uid://64txrs3ah8no" path="res://assets/sounds/fallingSoundCutscene.wav" id="16_a3hrp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w32d4"]
shader = ExtResource("1_euy4r")
shader_parameter/speedX = 0.0
shader_parameter/speedY = -0.025

[sub_resource type="LabelSettings" id="LabelSettings_287l7"]
font = ExtResource("3_88kup")
font_size = 166
font_color = Color(0.862854, 0.751033, 0.386998, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_8hoqd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_uxao6")
}, {
"duration": 2.0,
"texture": ExtResource("7_vr0hv")
}, {
"duration": 1.0,
"texture": ExtResource("8_a3hrp")
}, {
"duration": 2.0,
"texture": ExtResource("9_25m6f")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bre17")

[node name="Background" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_w32d4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -420.0
offset_bottom = 420.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bre17")

[node name="TitleMargins" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -494.5
offset_right = 494.5
offset_bottom = 245.0
grow_horizontal = 2
theme_override_constants/margin_top = 64

[node name="Title" type="Label" parent="TitleMargins"]
layout_mode = 2
text = "PITON TONY"
label_settings = SubResource("LabelSettings_287l7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Animations" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Animations"]
position = Vector2(960, 424)
scale = Vector2(0.24, 0.24)
sprite_frames = SubResource("SpriteFrames_8hoqd")

[node name="FallingTony" type="Sprite2D" parent="Animations"]
visible = false
position = Vector2(960, 416)
rotation = 3.14159
scale = Vector2(0.40625, 0.40625)
texture = ExtResource("10_nkawv")

[node name="BlackFade" type="TextureRect" parent="."]
self_modulate = Color(0, 0, 0, 0)
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1088.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_3w8rc")

[node name="ButtonsMargins" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 49.0
offset_top = 41.0
offset_right = 1871.0
offset_bottom = 1039.0
grow_horizontal = 2
theme_override_constants/margin_left = 512
theme_override_constants/margin_top = 512
theme_override_constants/margin_right = 512

[node name="Buttons" type="VBoxContainer" parent="ButtonsMargins"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="ButtonsMargins/Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_88kup")
theme_override_font_sizes/font_size = 86
text = "PLAY"
metadata/_edit_use_anchors_ = true

[node name="SettingsButton" parent="ButtonsMargins/Buttons" instance=ExtResource("5_bre17")]
layout_mode = 2
text = "SETTINGS"
menu_scene = ExtResource("6_88kup")

[node name="ControlsButton" parent="ButtonsMargins/Buttons" instance=ExtResource("5_bre17")]
layout_mode = 2
text = "CONTROLS"
menu_scene = ExtResource("13_3w8rc")

[node name="QuitButton" parent="ButtonsMargins/Buttons" instance=ExtResource("5_bre17")]
layout_mode = 2
text = "QUIT"
menu_scene = ExtResource("13_bh4e2")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_vr0hv")
autoplay = true

[node name="fallingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_a3hrp")
volume_db = -11.361
